--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,17 @@
 body{
     font-family: "Amatic SC", sans-serif;
     font-weight: bold;
+    background-image: url('image/Background-image.jpg'); /* Caminho para a imagem */
+      /* background-size: cover; /* Faz com que a imagem cubra toda a tela */
+      background-position: center; /* Centraliza a imagem */
+      background-repeat: no-repeat;
+      height: 200vh; /* Garante que a altura do fundo cubra toda a tela */
+       
 }
 header{
     margin-top: -21px;
     margin-left: -7.8px;
-    height: 150px;
+    height: 170px;
     width: 1879px;
     background-color: #ffbd59;
     display: flex;
@@ -15,24 +21,55 @@ header{
 } 
 
 h1{
-    
-    margin-top: 35px;
+    margin-top: 55px;
     padding: 20px;
+    margin-left: 50px;
 }
 
 .botão{
     font-family: "Amatic SC", sans-serif;
     font-size: 35px;
     font-weight: 900;
-    margin-left: 1100px;
-    margin-top: 50px;
+    margin-left: 750px;
+    margin-top: 60px;
     background-color: #ffbd59;
     text-align: right;
     height: 50px;
     padding: 0px 15px 15px 15px;
     border-radius: 25px;
-    border-color: white;
-    
-    
-    
+    border-color: white; 
+    cursor: pointer;
+}
+
+a{
+    text-decoration: none;
+    color: #D56A47
+}
+
+img {
+    float: inline-start;
+    padding: 15px;
+    margin-left: 15px;
+}
+
+footer{
+    text-align: center;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sub-titulo{
+    font-size: 45px;
+    text-align: center;
+    width: 1300px;
+}
+
+.titulo{
+    align-items: center;
+    height: 215px;
+    width: 500px;
 }
